# Myapp-Mono-Repo

./: bun.lockb  docker-compose.yaml  package-lock.json  package.json  pm2.config.js
apps/actix-service/: Cargo.toml  Dockerfile  Makefile  package.json
apps/actix-service/src/: controllers.rs  main.rs  routes.rs
apps/actix-service/src/controllers/: user_controller.rs
apps/actix-service/src/helper/: base_response.rs  http_logger.rs  logger.rs  mod.rs
apps/actix-service/src/routes/: index.rs
apps/actix-service/src/services/: user_service.rs
apps/api-gateway-service/: Dockerfile
apps/api-gateway-service/config/: kong.yml
apps/django-service/: Dockerfile  Makefile  manage.py  package.json  requirements.txt
apps/django-service/server/: settings.py  urls.py
apps/dotnet-service/: .dockerignore  Dockerfile  Makefile  Program.cs  README.md  appsettings.json  dotnet-service.csproj  dotnet-service.http  dotnet-service.sln  package.json
apps/dotnet-service/Controllers/: UserController.cs
apps/dotnet-service/Helpers/: BaseResponse.cs
apps/dotnet-service/Middlewares/: RequestResponseLoggingMiddleware.cs
apps/dotnet-service/Models/: User.cs
apps/dotnet-service/Properties/: launchSettings.json
apps/fiber-service/: .dockerignore  Dockerfile  Makefile  README.md  go.mod  main.go  package.json
apps/fiber-service/routes/: routes.go
apps/hono-service/: .dockerignore  Dockerfile  Makefile  package.json
apps/hyper-service/: Makefile  package.json
apps/vertx-service/: Dockerfile  Makefile  dependency-reduced-pom.xml  logback.xml  package.json  pom.xml
(+25 files in other folders)
