[package]
name = "actix-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.17.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
